ONE_MILLION.html

--- a/products/RABANNE/ONE_MILLION.html
+++ b/products/RABANNE/ONE_MILLION.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="icon" type="image/x-icon" href="image.png">
+    <link rel="icon" type="image/x-icon" href="../../present/img.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Million Fragancia de Hombre | Rabanne</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../present/style.css">
 </head>
 <body>
     <div class="container">
