--- a/products/RABANNE/ONE_MILLION.html
+++ b/products/RABANNE/ONE_MILLION.html
@@ -94,6 +94,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../../present/script.js"></script>
 </body>
 </html>
